@startuml

title __ENTITIES's Class Diagram__\n

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace resources.entities {
        class ca.ulaval.glo4002.game.interfaces.rest.resources.entities.Burger {
            - expiration : int
            + Burger()
            + decreaseExpirationDate()
            + getDaysLeft()
        }
      }
    }
  }
  

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace resources.entities {
        class ca.ulaval.glo4002.game.interfaces.rest.resources.entities.Resource {
            - resources : Map<String, ResourceElements>
            + Resource()
            + addBurger()
            + addSalad()
            + addWater()
            + clear()
            + getBurgersQuantity()
            + getResources()
            + getSaladQuantity()
            + getWaterQuantity()
        }
      }
    }
  }
  

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace resources.entities {
        abstract class ca.ulaval.glo4002.game.interfaces.rest.resources.entities.ResourceElements {
            - quantity : int
            + ResourceElements()
            + addQuantity()
            {abstract} + decreaseExpirationDate()
            {abstract} + getDaysLeft()
            + getQuantity()
            + removeElement()
            + reset()
            + setQuantity()
        }
      }
    }
  }
  

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace resources.entities {
        class ca.ulaval.glo4002.game.interfaces.rest.resources.entities.ResourceFactory {
            + create()
        }
      }
    }
  }
  

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace resources.entities {
        interface ca.ulaval.glo4002.game.interfaces.rest.resources.entities.ResourceRepository {
            {abstract} + add()
            {abstract} + decreaseExpirationDate()
            {abstract} + drinkWater()
            {abstract} + eatBurger()
            {abstract} + eatSalad()
            {abstract} + findAll()
            {abstract} + findConsumedResource()
            {abstract} + findExpiredResource()
            {abstract} + findFreshResource()
            {abstract} + findResourceQuantity()
            {abstract} + reset()
        }
      }
    }
  }
  

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace resources.entities {
        class ca.ulaval.glo4002.game.interfaces.rest.resources.entities.Salad {
            - expiration : int
            + Salad()
            + decreaseExpirationDate()
            + getDaysLeft()
        }
      }
    }
  }
  

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace resources.entities {
        class ca.ulaval.glo4002.game.interfaces.rest.resources.entities.Water {
            - expiration : int
            + Water()
            + decreaseExpirationDate()
            + getDaysLeft()
        }
      }
    }
  }
  

  ca.ulaval.glo4002.game.interfaces.rest.resources.entities.Burger -up-|> ca.ulaval.glo4002.game.interfaces.rest.resources.entities.ResourceElements
  ca.ulaval.glo4002.game.interfaces.rest.resources.entities.Salad -up-|> ca.ulaval.glo4002.game.interfaces.rest.resources.entities.ResourceElements
  ca.ulaval.glo4002.game.interfaces.rest.resources.entities.Water -up-|> ca.ulaval.glo4002.game.interfaces.rest.resources.entities.ResourceElements


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
